--- a/wwr/index.html
+++ b/wwr/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <a id=" logo_link" href="idndex.html">
+        <a id=" logo_link" href="index.html">
             <img class-="logo" src="images/logo.png" alt="Dry Oar Logo">
         </a>
         <nav>
