--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="./wwr/site-plan-rafting.ht">site plan</a>
+    <a href="./wwr/site-plan-rafting.html">site plan</a>
 </body>
 </html>
