--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <a href="./wwr/site-plan-rafting.html">site plan</a>
+    <a href="./wwr/index.html">index</a>
 </body>
 </html>
