--- a/wwr/index.html
+++ b/wwr/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Dry Oar Boating</title>
 </head>
 <body>
+        <div id="content">
+            <header>
+        . . .
+            </footer>
+        </div>
+    </body>
     <header>
         <a id=" logo_link" href="index.html">
             <img class-="logo" src="images/logo.png" alt="Dry Oar Logo">
@@ -58,13 +65,13 @@
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
-            <a href="https://facebook.com">
+            <a href="https://facebook.com" target="blank">
                 <img src="images/facebook.png" alt="fb icon">
             </a>
-            <a href="https://twitter.com">
+            <a href="https://twitter.com" target="blank">
                 <img src="images/twitter.png" alt="twitter icon">
             </a>
-            <a href="https://instagram.com">
+            <a href="https://instagram.com" target="blank">
                 <img src="images/instagram.png" alt="instagram icon">
             </a>
         </div>
