--- a/wwr/index.html
+++ b/wwr/index.html
@@ -8,12 +8,12 @@
     <title>Dry Oar Boating</title>
 </head>
 <body>
-        <div id="content">
-            <header>
-        . . .
-            </footer>
-        </div>
-    </body>
+    <div id="content">
+        <header>
+    . . .
+        </footer>
+    </div>
+</body>
     <header>
         <a id=" logo_link" href="index.html">
             <img class-="logo" src="images/logo.png" alt="Dry Oar Logo">
@@ -59,6 +59,7 @@
             <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
             <a class='join' href="rivers.html">Join Us</a>
         </section>
+         <div id="backround"<>/div>
     </main>
     <footer>
         <p>Dry Oar &copy; 20XX - Your First and Last Name Here</p>
@@ -74,6 +75,6 @@
             <a href="https://instagram.com" target="blank">
                 <img src="images/instagram.png" alt="instagram icon">
             </a>
-        </div>
     </footer>
-</body>
+ </body>
+ </html>
