--- a/wwr/index.html
+++ b/wwr/index.html
@@ -62,7 +62,7 @@
          <div id="backround"<>/div>
     </main>
     <footer>
-        <p>Dry Oar &copy; 20XX - Your First and Last Name Here</p>
+        <p>Dry Oar &copy; 20XX - Matthew Oliphant</p>
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
