--- a/wwr/index.html
+++ b/wwr/index.html
@@ -53,13 +53,14 @@
             <img class="icon" src="images/oars.png" alt="oars icon">
             <h2>Rapids</h2>
         </section>
+        <div id="backround"></div>
         <img class="mountains" src="./images/mountains.jpeg" alt="Misty mountains">
         <section class="msg">
             <h2>More Than Just The Thrill</h2>
             <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
             <a class='join' href="rivers.html">Join Us</a>
         </section>
-         <div id="backround"<>/div>
+
     </main>
     <footer>
         <p>Dry Oar &copy; 20XX - Matthew Oliphant</p>
