--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <a href="./wwr/site-plan-rafting.html">site plan</a>
     <a href="./wwr/index.html">index</a>
+    <a href="./kicks/site-plan.html">Personal Site Pan</a>
 </body>
 </html>
