--- a/kicks/site-plan.html
+++ b/kicks/site-plan.html
@@ -142,22 +142,32 @@
         <img src="#" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Why Choose us</h3>
       <p>
-        [Written copy for the Page 2 here]
+        Why will people come to your site?
+People are going to come to my site for a variety of reasons.  The first is that they want an authentic place to talk about the things they love.  Another reason is that they want a reliable place to buy, sell and trade goods that they can know are authentic and exactly as described.  Finally the last reason is that they want a community to be a part of that enjoys the same things they do.  People want the opportunity to share their passion with others and learn from other people in the game that maybe have more experience.  With collecting and buying streetwear/hypewear people like to meet the people in it and just get to know those in the scene which creates an awesome experience.
+        What questions will your visitors expect your site to answer for them?
+The people visiting my site have always looked for a good and reliable website that respects them and loves them as much as they love their hobby.  They want the question answered that every other place like this has been left blank and that is the legitimacy of the legit checking process.  They will also be wondering if this website is truly as much of a one stop shop for all things sneakers as it is advertised to be.  And they will learn very fast that it is, with a variety of things to do for all things Hype.
+        What type of activities will visitors want to complete on your site?
+The visitors on this site will want to buy, sell and trade goods.  Next they will want to be able to communicate with others who share the same hobbies and talk about things like the latest trends and the newest brand deals.  Finally they will want a place to post their newest fits and check out others outfits for inspiration.  This industry has lacked something like this for quite some time and I think this will revive people’s interest in both the hobby and the industry.
+        Why Will Visitors come to your site instead of another to get this information or to complete these transactions?
+The answer to this question is incredibly easy and one word, Reliability.  Everyone involved in this industry/hobby has always been looking for the most reliable website around and this one will be it.  Also no other site out there combines the buying and selling with the message boards or just communicating with others who share similar interests.  Usually it is just one or the other for example the biggest site in the industry right now is StockX and they only do buying and selling.  Furthermore they have been involved in several controversies surrounding their legit checking system and the amount of fakes they have been putting into circulation.  Thus I am sure once this site is launched and word gets around of just how reliable this site is, everyone in the Hobby will flock to it.
       </p>
-      <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+      <p>Images</p>
+        <img src="./images/be safe.jpeg" alt="be safe">
+        <img src="./images/offwhitee.jpeg" alt="off white">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Whats Required</h3>
       <p>
-        [Written copy for the Page 3 here]
+        What information is necessary to complete any actions your site offers?
+First users will need to submit normal things like their name, address, and phone number.  Next whenever they want to complete any transactions they will need their credit/debit card and a form of identity verification whether that be a License or Social Security card.  Then whenever they sell anything they will need to submit things like receipts and pictures to prove whatever they are selling is real and authentic.  If whatever they were selling does not pass the legit check service they will have to serve a ten day ban and after which they will have to redo the entire identity process where they need to give their phone number, name, address, and form of identification.  This process will follow the three strikes system if somebody’s account has to get through this process three times they will be permanently banned.
+        How We Want Users on the Site to Act:
+First everybody must be respectful to everyone on the site.  We will have mods on the chat rooms who will make sure everybody upholds this rule.  Next everybody must use and advertise real goods, no fakes are allowed on the site.
       </p>
-      <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+      <p>Images</p>
+        <img src="./images/supreme.jpeg" alt="supreme">
+        <img src="./images/wethebest.png" alt="we the best">
 
       </ul>
       <hr>
