--- a/kicks/site-plan.html
+++ b/kicks/site-plan.html
@@ -181,19 +181,19 @@ First everybody must be respectful to everyone on the site.  We will have mods o
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
-      <img src="#" alt="home page wireframe">
+      <img class="homie-img" src="./images/image2.jpeg" alt="home page wireframe">
 
       <h3>[Page 2]</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img class="gurantee-img" src="./images/image0.jpeg" alt="page 2 wireframe">
 
       <h3>[Page 3]</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img class="sells-img" src="./images/image1.jpeg" alt="page 3 wireframe">
     </main>
   </body>
 
