--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <a href="./wwr/site-plan-rafting.html">site plan</a>
     <a href="./wwr/index.html">index</a>
     <a href="./kicks/site-plan.html">Personal Site Pan</a>
+    <a href="./kicks/home.html">Home Page</a>
 </body>
 </html>
