--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <a href="./wwr/site-plan-rafting.html">site plan</a>
     <a href="./wwr/index.html">index</a>
-    <a href="./kicks/site-plan.html">Personal Site Pan</a>
+    <a href="./kicks/site-plan.html">Personal Site Plan</a>
     <a href="./kicks/home.html">Home Page</a>
 </body>
 </html>
