--- a/kicks/home.html
+++ b/kicks/home.html
@@ -52,11 +52,11 @@
         </section>
         <section class="camping-card">
             <h2>Talk</h2>
-            <img class="card-img" src="./images/Messageboard.png" alt="Messageboard Example">
+            <img class="card-img" src="./images/Messageboard.jpeg" alt="Messageboard Example">
         </section>
         <section class="rapids-card">
             <h2>Share</h2>
-            <img class="card-img" src="./images/Style.webp" alt="Style">
+            <img class="card-img" src="./images/Style.jpeg" alt="Style">
         </section>
 
     </main>
