--- a/kicks/home.html
+++ b/kicks/home.html
@@ -37,13 +37,11 @@
             </div>
         </section>
     </div>
-    <div id="Kick">
-        <div id="Kick-box">
-            <img id="Kick-image" src="./images/Kick.jpg" alt="Kick">
-        </div>
-        <section id="Kick-msg">
-            <h1 class="home-title">About Us</h1>
-            <h2 class="Home-Explanation">Here at Kooky Kicks we strive to create a safe and authentic environment for all sneaker and fashion lovers to share their passion</h2>
+    <main class="home-grid">
+        <section class="rover-card">
+            <h2>About Us</h2>
+            <p>Here at Kooky Kicks we strive to create a safe and authentic environment for all sneaker and fashion lovers to share their passion</p>
+            <img class="port-img" src="./images/Kick.jpg" alt="river in forest">
     </div>
     <main class="home-grid">
         <section class="rivers-card">
