--- a/kicks/page1.html
+++ b/kicks/page1.html
@@ -38,21 +38,22 @@
         </section>
     </div>
     <main class="home-grid">
-        <section class="rivers-card">
-            <img class="card-img" src="./images/Package.jpeg" alt="Package">
-            <h2>Step One</h2>
-            <p>For Step One the shoes are shipped by the selling to one of our legit checking facilites.</p>
+        <section class="rover-card">
+            <img class="port-img" src="./images/Package.jpeg" alt="river in forest">
+            <h2>Step 1</h2>
+            <p>For Step One the shoes are shipped by the selling to one of our legit checking facilites</p>
         </section>
-        <section class="camping-card">
-            <img class="card-img" src="./images/fake.jpeg" alt="Legit Check">
-            <h2>Step Two</h2>
-            <p>When the shoe arrives at the legit checking facilites it is checked over by several proffesionals and once they deem it legit they will repackage it and ship it to the buyer.  If the shoes fail the legit check the buyer is issued a refund while the shoes are shipped back to the seller.</p>
+    </main>
+        <section class="camper-card">
+            <img class="bob-img" src="./images/fake.jpeg" alt="tent in mountains">
+            <h2>Step 2</h2>
+            <p>When the shoe arrives at the legit checking facilities it is checked over by several professionals and once they deem it legit they will repackage it and ship it to the buyer.  If the shoes fail the legit check the buyer is issued a refund while the shoes are shipped back to the seller</p>
         </section>
-        <section class="rapids-card">
-            <img class="card-img" src="./images/happy.jpeg" alt="Happy Customer">
-            <h2>Step Three</h2>
-            <p>The Shoes arrive at the buyers house for them to enjoy, if they are unhappy with how the shoes look or fit there is a seven day return policy where they can send back the shoes to the buyer and recieve a refund.</p>
-        </section>
+    </main>
+        <section class="waterfall-card">
+            <img class="cardinal-img" src="./images/happy.jpeg" alt="rafting boat">
+            <h2>Step 3</h2>
+            <p>The Shoes arrive at the buyer's house for them to enjoy, if they are unhappy with how the shoes look or fit there is a seven day return policy where they can send back the shoes to the buyer and receive a refund.</p>
     </main>
     <footer>
         <p>Kooky Kicks &copy; 20XX - Matthew Oliphant</p>
