--- a/wwr/index.html
+++ b/wwr/index.html
@@ -32,8 +32,13 @@
         <section id="hero-msg">
             <h1 class="home-title">Have An Adventure</h1>
             <h4>Make Memories with Dry Oar </h4>
-            <div class='button-box'>
-                <a class='book' href="rates.html">Book Now</a>
+            <div class="dropdown">
+                <button onclick="myFunction()" class="dropbtn">Learn More</button>
+                <div id="myDropdown" class="dropdown-content">
+                  <a href="#">Rivers</a>
+                  <a href="#">Camping</a>
+                  <a href="#">Rapids</a>
+                </div>
             </div>
         </section>
     </div>
@@ -77,5 +82,26 @@
                 <img src="images/instagram.png" alt="instagram icon">                            
             </a>
     </footer>
+    <script>
+    /* When the user clicks on the button,
+toggle between hiding and showing the dropdown content */
+function myFunction() {
+  document.getElementById("myDropdown").classList.toggle("show");
+}
+
+// Close the dropdown menu if the user clicks outside of it
+window.onclick = function(event) {
+  if (!event.target.matches('.dropbtn')) {
+    var dropdowns = document.getElementsByClassName("dropdown-content");
+    var i;
+    for (i = 0; i < dropdowns.length; i++) {
+      var openDropdown = dropdowns[i];
+      if (openDropdown.classList.contains('show')) {
+        openDropdown.classList.remove('show');
+      }
+    }
+  }
+}
+    </script>
  </body>
  </html>
