--- a/kicks/contact-us.html
+++ b/kicks/contact-us.html
@@ -22,7 +22,7 @@
             <a href="index.html">Home</a>
             <a href="page1.html">Authenticity Gurantee</a>
             <a href="site-plan.html">Site Plan</a>
-            <a href="page2.html">Selling</a>
+            <a href="page21.html">Selling</a>
             <a href="contact-us.html">Contact Us</a>
         </nav>
     </header>   
@@ -31,10 +31,10 @@
             <img id="hero-image" src="images/hero.png" alt="People enjoying white water rafting">
         </div>
         <section id="hero-msg">
-            <h1 class="home-title">Have An Adventure</h1>
-            <h4>Make Memories with Dry Oar </h4>
+            <h1 class="home-title">Any Questions</h1>
+            <h4>Ask Us! </h4>
             <div class='button-box'>
-                <a class='book' href="rates.html">Book Now</a>
+                <a class='book' href="rates.html">Send</a>
             </div>
         </section>
     </div>
