--- a/kicks/page1.html
+++ b/kicks/page1.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div id="content">
+        <header>
     . . .
+        </footer>
     </div>
 </body>
     <header>
@@ -20,7 +22,7 @@
             <a href="home.html">Home</a>
             <a href="page1.html">Authenticity Gurantee</a>
             <a href="site-plan.html">Site Plan</a>
-            <a href="page2.html">Selling</a>
+            <a href="page21.html">Selling</a>
             <a href="contact-us.html">Contact Us</a>
         </nav>
     </header>   
