--- a/kicks/page21.html
+++ b/kicks/page21.html
@@ -25,41 +25,36 @@
             <a href="page21.html">Selling</a>
             <a href="contact-us.html">Contact Us</a>
         </nav>
-    </header>   
+    </header>
     <div id="hero">
         <div id="hero-box">
-            <img id="hero-image" src="images/shoecollect.jpeg" alt="Sneaker Collection Example">
+            <img id="hero-image" src="images/joysofselling.jpeg" alt="Verification">
         </div>
         <section id="hero-msg">
-            <h1 class="home-title">Buy/Sell/Trade/Talk</h1>
+            <h1 class="home-title">Become a Seller Today!</h1>
             <div class='button-box'>
-                <a class='book' href="rates.html">Learn More</a>
+                <a class='Learn More' href="rates.html">Sign Up</a>
             </div>
         </section>
     </div>
-    <main class="home-grid">
-        <section class="rover-card">
-            <h2>About Us</h2>
-            <p>Here at Kooky Kicks we strive to create a safe and authentic environment for all sneaker and fashion lovers to share their passion</p>
-            <img class="port-img" src="./images/Kick.jpg" alt="river in forest">
-    </div>
-    <main class="home-grid">
-        <section class="rivers-card">
-            <h2>Buy/Sell</h2>
-            <img class="card-img" src="./images/Buy.jpeg" alt="Buying">
-        </section>
-        <section class="camping-card">
-            <h2>Talk</h2>
-            <img class="card-img" src="./images/Messageboard.jpeg" alt="Messageboard Example">
-        </section>
-        <section class="rapids-card">
-            <h2>Share</h2>
-            <img class="card-img" src="./images/Style.jpeg" alt="Style">
-        </section>
-
     </main>
-    <footer>
-        <p>Kooky Kicks &copy; 20XX - Matthew Oliphant</p>
+        <section class="rover-card">
+            <h1>Seller Steps</h1>
+            <p>First you verify your identity, then you create a listing.  After that you need to print of the shipping label and ship the item to a verification facility.  Once the item is verified you will recieve your funds unless the item is fake then you refund the money.</p>
+        </section>
+</div>
+<main class="home-grid">
+<div id="back"></div>
+<img class="lol" src="./images/resell.jpeg" alt="Misty mountains">
+<section class="msg">
+    <h2>The Joys of Being a Seller</h2>
+    <p>When you are a selling an item you get to enjoy giving somebody else the opportunity to perhaps own their dream piece while you may have just let it sit in your closet for forever. </p>
+    <a class='join' href="page1.html">Read our Gurantee</a>
+    </section>
+
+</main>
+<footer>
+        <p>Kooky Kicks &copy;20XX - Matthew Oliphant</p>
         <p><a href="site-plan.html">Site Plan</a></p>
         <p><a href="contact-us.html">Contact Us</a></p>
         <div class="social">
@@ -73,5 +68,5 @@
                 <img src="images/instagram.png" alt="instagram icon">                            
             </a>
     </footer>
- </body>
- </html>
+</body>
+</html>
