--- a/kicks/site-plan.html
+++ b/kicks/site-plan.html
@@ -193,7 +193,7 @@ First everybody must be respectful to everyone on the site.  We will have mods o
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img class="sells-img" src="./images/image1.jpeg" alt="page 3 wireframe">
+      <img class="sells-img" src="./images/IMG_2555.jpg" alt="page 3 wireframe">
     </main>
   </body>
 
