--- a/kicks/page1.html
+++ b/kicks/page1.html
@@ -41,7 +41,7 @@
         <section class="rover-card">
             <img class="port-img" src="./images/Package.jpeg" alt="river in forest">
             <h2>Step 1</h2>
-            <p>For Step One the shoes are shipped by the selling to one of our legit checking facilites</p>
+            <p>For Step One the shoes are shipped by the sellers to one of our legit checking facilities</p>
         </section>
     </main>
         <section class="camper-card">
