--- a/kicks/page21.html
+++ b/kicks/page21.html
@@ -40,7 +40,7 @@
     </main>
         <section class="rover-card">
             <h1>Seller Steps</h1>
-            <p>First you verify your identity, then you create a listing.  After that you need to print of the shipping label and ship the item to a verification facility.  Once the item is verified you will recieve your funds unless the item is fake then you refund the money.</p>
+            <p>First you verify your identity, then you create a listing.  After that you need to print of the shipping label and ship the item to a verification facility.  Once the item is verified you will receive your funds unless the item is fake then you refund the money.</p>
         </section>
 </div>
 <main class="home-grid">
@@ -48,7 +48,7 @@
 <img class="lol" src="./images/resell.jpeg" alt="Misty mountains">
 <section class="msg">
     <h2>The Joys of Being a Seller</h2>
-    <p>When you are a selling an item you get to enjoy giving somebody else the opportunity to perhaps own their dream piece while you may have just let it sit in your closet for forever. </p>
+    <p>When you are selling an item you get to enjoy giving somebody else the opportunity to perhaps own their dream piece while you may have just let it sit in your closet for forever. </p>
     <a class='join' href="page1.html">Read our Gurantee</a>
     </section>
 
