--- a/kicks/page21.html
+++ b/kicks/page21.html
@@ -28,7 +28,7 @@
     </header>
     <div id="hero">
         <div id="hero-box">
-            <img id="hero-image" src="images/joysofselling.jpeg" alt="Verification">
+            <img id="hero-image" src="images/bluetint.jpeg" alt="Verification">
         </div>
         <section id="hero-msg">
             <h1 class="home-title">Become a Seller Today!</h1>
